force-app/main/default/objects/ECT_State__c/ECT_State__c.object-meta.xml
<CustomObject>
    <description>Holds the State information for the ECT application</description>
    <label>State</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>