force-app/main/default/objects/ECT_State__c/fields/CEO_Website__c.field-meta.xml
<CustomField>
    <fullName>CEO_Website__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CEO Website</label>
    <type>Url</type>
</CustomField>