force-app/main/default/objects/ECT_State__c/fields/COA__c.field-meta.xml
<CustomField>
    <fullName>COA__c</fullName>
    <inlineHelpText>Certificate of Ascertainment</inlineHelpText>
    <label>COA</label>
    <summaryFilterItems>
        <field>ECT_Certificate_Review__c.Certificate_Type__c</field>
        <operation>equals</operation>
        <value>Certificate of Ascertainment</value>
    </summaryFilterItems>
    <summaryForeignKey>ECT_Certificate_Review__c.State__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>