force-app/main/default/objects/ECT_State__c/fields/COA_ST__c.field-meta.xml
<CustomField>
    <fullName>COA_ST__c</fullName>
    <inlineHelpText>Shipment &amp; Tracking</inlineHelpText>
    <label>COA S&amp;T</label>
    <summaryFilterItems>
        <field>ECT_Shipping_Tracking_Information__c.Certificate_Type__c</field>
        <operation>equals</operation>
        <value>Certificate of Ascertainment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ECT_Shipping_Tracking_Information__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>ECT_Shipping_Tracking_Information__c.State__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>