force-app/main/default/objects/ECT_State__c/fields/COV__c.field-meta.xml
<CustomField>
    <fullName>COV__c</fullName>
    <inlineHelpText>Certificates of Vote</inlineHelpText>
    <label>COV</label>
    <summaryFilterItems>
        <field>ECT_Certificate_Review__c.Certificate_Type__c</field>
        <operation>equals</operation>
        <value>Certificate of Vote</value>
    </summaryFilterItems>
    <summaryForeignKey>ECT_Certificate_Review__c.State__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>