force-app/main/default/objects/ECT_State__c/fields/COV_S_T__c.field-meta.xml
<CustomField>
    <fullName>COV_S_T__c</fullName>
    <inlineHelpText>Certificate of Vote Shipping &amp; Tracking</inlineHelpText>
    <label>COV S&amp;T</label>
    <summaryFilterItems>
        <field>ECT_Shipping_Tracking_Information__c.Certificate_Type__c</field>
        <operation>equals</operation>
        <value>Certificate of Vote</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ECT_Shipping_Tracking_Information__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>ECT_Shipping_Tracking_Information__c.State__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>