force-app/main/default/objects/ECT_State__c/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LinkedIn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>