force-app/main/default/objects/ECT_State__c/fields/Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Address</label>
    <type>Address</type>
</CustomField>