force-app/main/default/objects/ECT_State__c/fields/State_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>State_Abbreviation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State Abbreviation</label>
    <length>8</length>
    <type>Text</type>
</CustomField>