force-app/main/default/objects/ECT_State__c/fields/State_POC_1__c.field-meta.xml
<CustomField>
    <fullName>State_POC_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State POC 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>States</relationshipLabel>
    <relationshipName>States</relationshipName>
    <type>Lookup</type>
</CustomField>