force-app/main/default/objects/ECT_State__c/fields/State_POC_2__c.field-meta.xml
<CustomField>
    <fullName>State_POC_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State POC 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>States (State POC 2)</relationshipLabel>
    <relationshipName>States1</relationshipName>
    <type>Lookup</type>
</CustomField>