force-app/main/default/objects/ECT_State__c/fields/State_POC_2_User__c.field-meta.xml
<CustomField>
    <fullName>State_POC_2_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State POC 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>States1</relationshipName>
    <type>Lookup</type>
</CustomField>