force-app/main/default/objects/ECT_State__c/fields/State_Seal__c.field-meta.xml
<CustomField>
    <fullName>State_Seal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State Seal</label>
    <type>Url</type>
</CustomField>