force-app/main/default/objects/ECT_State__c/validationRules/State_must_match_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>State_must_match_Account</fullName>
    <active>true</active>
    <errorConditionFormula>Name !=  Account__r.Name</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>State Name must match the name of the Account</errorMessage>
</ValidationRule>