force-app/main/default/objects/ECT_State__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>State_Abbreviation__c</columns>
    <columns>State_Seal__c</columns>
    <columns>Facebook__c</columns>
    <columns>Instagram__c</columns>
    <columns>LinkedIn__c</columns>
    <columns>Twitter__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>