force-app/main/default/objects/ECT_State__c/listViews/States_only.listView-meta.xml
<ListView>
    <fullName>States_only</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>COA_ST__c</columns>
    <columns>COA__c</columns>
    <columns>COV_S_T__c</columns>
    <columns>COV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>Congress</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>NARA</value>
    </filters>
    <label>States - tracking info</label>
</ListView>